content/entries/technology/service-mesh/code/strict-payments-policy.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: payments-strict-mtls
  namespace: payments
spec:
  selector:
    matchLabels:
      app: payments
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: payments-default-deny
  namespace: payments
spec:
  selector:
    matchLabels:
      app: payments
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: checkout-can-create-charge
  namespace: payments
spec:
  selector:
    matchLabels:
      app: payments
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/shop/sa/checkout
      to:
        - operation:
            methods:
              - POST
            paths:
              - /v1/charges
